make-a-wish-salesforce/src/objects/VisualAntidote__Field_Integration__c.object
<CustomObject>
    <description>This object contains field integration configuration, such as File Upload will have a Field Integration if an integration is selected.</description>
    <fields>
        <fullName>VisualAntidote__FieldConfiguration__c</fullName>
        <description>This is the JSON that we will save the Fields Configuration which are extra fields that doesn&apos;t need to be track.</description>
        <label>Field Configuration</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__FormFieldId__c</fullName>
        <description>This is the Field HTML Element ID in the Form. When we add a field in the Form we generate this ID.</description>
        <label>Form Field Id</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__Form__c</fullName>
        <description>Form id(Previous_Form_Id)</description>
        <label>Form</label>
        <referenceTo>VisualAntidote__Previous_Form__c</referenceTo>
        <relationshipLabel>Field Integration</relationshipLabel>
        <relationshipName>Field_Integration</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>VisualAntidote__PlatformAccount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Platform Account</label>
        <referenceTo>VisualAntidote__Platform_Account__c</referenceTo>
        <relationshipLabel>Field Integration</relationshipLabel>
        <relationshipName>Field_Integration</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Field Integration</label>
    <nameField>
        <label>Field Integration Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Integration</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>